// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty data 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1000}
      createdAt={0}
      description="Delphini perfume"
      id="01"
      key="01"
      note=""
    />
    <ExpenseListItem
      amount={250}
      createdAt={-345600000}
      description="oil-free-facewash"
      id="02"
      key="02"
      note=""
    />
    <ExpenseListItem
      amount={650}
      createdAt={345600000}
      description="ortho--oil"
      id="03"
      key="03"
      note=""
    />
  </div>
</div>
`;
